--- a/vorticity-variance/2019-05-07-vorticity-variance-NATL60-every-month-computation.ipynb
+++ b/vorticity-variance/2019-05-07-vorticity-variance-NATL60-every-month-computation.ipynb
@@ -161,9 +161,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lupa",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "lupa"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
