--- a/vorticity-variance/2019-05-09-vorticity-variance-NATL60-every-month-plots.ipynb
+++ b/vorticity-variance/2019-05-09-vorticity-variance-NATL60-every-month-plots.ipynb
@@ -275,9 +275,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env-cal1",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "env-cal1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
