--- a/vorticity-variance/2019-05-16-AA-montage-plots.ipynb
+++ b/vorticity-variance/2019-05-16-AA-montage-plots.ipynb
@@ -6,16 +6,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "convert -delay 120 -loop 0 plots/NATL60_plots_small_scale_vorticity_variance_y201*m*.png plots/NATL60_plots_small_scale_vorticity_variance.gif\n",
-    "convert -delay 120 -loop 0 plots/GLORYS12V1_plots_small_scale_vorticity_variance_y2017m*.png plots/GLORYS12V1_plots_small_scale_vorticity_variance_y2017.gif\n",
-    "convert -delay 120 -loop 0 plots/GLORYS2V4_plots_small_scale_vorticity_variance_y2017m*.png plots/GLORYS2V4_plots_small_scale_vorticity_variance_y2017.gif\n",
-    "montage plots/NATL60_plots_small_scale_vorticity_variance_y2013m03.png plots/NATL60_plots_small_scale_vorticity_variance_y2013m09.png  plots/GLORYS12V1_plots_small_scale_vorticity_variance_y2017m03.png plots/GLORYS12V1_plots_small_scale_vorticity_variance_y2017m09.png plots/GLORYS12V1_plots_small_scale_vorticity_variance_y2017m03.png plots/GLORYS2V4_plots_small_scale_vorticity_variance_y2017m09.png -geometry 2048x1024 -tile 2x3 -quality 100 fine_scale_vorticity_variance_NATL60-GLORYS12V1-GLORYS2V4.png\n",
+    "#make gifs out of monthly plots\n",
     "\n",
-    "convert fine_scale_vorticity_variance_NATL60-GLORYS12V1-GLORYS2V4.png -trim -bordercolor White -border 20x10 +repage fine_scale_vorticity_variance_NATL60-GLORYS12V1-GLORYS2V4.png\n",
+    "!convert -delay 120 -loop 0 plots/NATL60_plots_small_scale_vorticity_variance_y201*m*.png plots/NATL60_plots_small_scale_vorticity_variance.gif\n",
+    "!convert -delay 120 -loop 0 plots/GLORYS12V1_plots_small_scale_vorticity_variance_y2017m*.png plots/GLORYS12V1_plots_small_scale_vorticity_variance_y2017.gif\n",
+    "!convert -delay 120 -loop 0 plots/GLORYS2V4_plots_small_scale_vorticity_variance_y2017m*.png plots/GLORYS2V4_plots_small_scale_vorticity_variance_y2017.gif\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#compare plots for the 3 simulations and the month of march and september\n",
     "\n",
-    "\n",
-    "\n",
-    "\n"
+    "!montage plots/NATL60_plots_small_scale_vorticity_variance_y2013m03.png plots/NATL60_plots_small_scale_vorticity_variance_y2013m09.png  plots/GLORYS12V1_plots_small_scale_vorticity_variance_y2017m03.png plots/GLORYS12V1_plots_small_scale_vorticity_variance_y2017m09.png plots/GLORYS12V1_plots_small_scale_vorticity_variance_y2017m03.png plots/GLORYS2V4_plots_small_scale_vorticity_variance_y2017m09.png -geometry 2048x1024 -tile 2x3 -quality 100 fine_scale_vorticity_variance_NATL60-GLORYS12V1-GLORYS2V4.png\n",
+    "!convert fine_scale_vorticity_variance_NATL60-GLORYS12V1-GLORYS2V4.png -trim -bordercolor White -border 20x10 +repage fine_scale_vorticity_variance_NATL60-GLORYS12V1-GLORYS2V4.png\n"
    ]
   }
  ],
